force-app/main/default/objects/Lease_Claim_Equipment__c/Lease_Claim_Equipment__c.object-meta.xml
<CustomObject>
    <label>Lease Claim Equipment</label>
    <nameField>
        <displayFormat>LC-{00000000}</displayFormat>
        <label>Lease Claim Equipment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lease Claim Equipment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>