force-app/main/default/objects/Lease_Claim_Equipment__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <formula>Lease_Claim__r.Lease__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract</label>
    <type>Text</type>
</CustomField>