force-app/main/default/objects/Lease_Claim_Equipment__c/fields/Contract_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Contract_Equipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Equipment</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>cllease__Contract_Equipment__c.cllease__Contract__c</field>
            <operation>equals</operation>
            <valueField>$Source.LS_Contract__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>cllease__Contract_Equipment__c</referenceTo>
    <relationshipLabel>Lease Claim Equipment (Contract Equipment)</relationshipLabel>
    <relationshipName>Lease_Claim_Equipment1</relationshipName>
    <type>Lookup</type>
</CustomField>