force-app/main/default/objects/Lease_Claim_Equipment__c/fields/Install_Address__c.field-meta.xml
<CustomField>
    <fullName>Install_Address__c</fullName>
    <formula>Contract_Equipment__r.Install_Address_Line_1__c  + &quot; &quot; +  Contract_Equipment__r.Install_Address_Line_2__c + &quot; &quot; +  Contract_Equipment__r.City__c + &quot;, &quot; + Contract_Equipment__r.State__c + &quot; &quot; +  Contract_Equipment__r.Zip_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Install Address</label>
    <type>Text</type>
</CustomField>