force-app/main/default/objects/Lease_Claim_Equipment__c/fields/Lease_Claim__c.field-meta.xml
<CustomField>
    <fullName>Lease_Claim__c</fullName>
    <label>Lease Claim</label>
    <referenceTo>Lease_Claims__c</referenceTo>
    <relationshipLabel>Lease Claim Equipment</relationshipLabel>
    <relationshipName>Lease_Claim_Equipment</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>