force-app/main/default/objects/Lease_Claim_Equipment__c/fields/LS_Contract__c.field-meta.xml
<CustomField>
    <fullName>LS_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LS Contract</label>
    <referenceTo>cllease__Lease_Account__c</referenceTo>
    <relationshipLabel>Lease Claim Equipment</relationshipLabel>
    <relationshipName>Lease_Claim_Equipment</relationshipName>
    <type>Lookup</type>
</CustomField>