force-app/main/default/objects/Lease_Claim_Equipment__c/fields/Make__c.field-meta.xml
<CustomField>
    <fullName>Make__c</fullName>
    <formula>Contract_Equipment__r.cllease__Make__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Make</label>
    <type>Text</type>
</CustomField>