force-app/main/default/objects/Lease_Claim_Equipment__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <formula>Contract_Equipment__r.cllease__Model__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Model</label>
    <type>Text</type>
</CustomField>